[Feature] cbo jefe prestasmita on view rendimiento